[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
name = "farmview"
version = "0.1.1"

[dependencies]
clap = "2.6.0"
error-chain = "0.10.0"
rayon = "0.6.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
ssh2 = "0.3.1"
tera = "0.8.0"
time = "0.1"
xdg = "2.0.0"

[dependencies.handlebars]
default-features = false
features = ["serde_type"]
version = "0.25.0"

[dependencies.hyper]
default-features = false
version = "0.10"

[dependencies.reroute]
default-features = false
version = "0.3"

[dependencies.toml]
version = "0.3"
