[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
name = "farmview"
version = "0.1.1"

[dependencies]
clap = "2.6.0"
crossbeam = "0.2.10"
error-chain = "0.10.0"
rayon = "0.7.1"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
ssh2 = "0.3.1"
tera = "0.10.6"
time = "0.1"
toml = "0.4.1"
xdg = "2.0.0"

[dependencies.handlebars]
version = "0.26.0"

[dependencies.hyper]
default-features = false
version = "0.10"

[dependencies.reroute]
default-features = false
version = "0.3"
